# AdventOfCode

./: .gitignore  README.md
.github/workflows/: 2015-python.yml  2023-tests.yml  2024-tests.yml  2025-python.yml
2015/AoC2015-01/: Elf.cs  Program.cs  README.md
2015/AoC2015-02/: Elf.cs  Program.cs  README.md
2015/AoC2015-03/: DirectionParser.cs  DirectionParserNextYear.cs  Program.cs
2015/AoC2015-04/: Program.cs  README.md
2015/AoC2015-06/: GridRange.cs  Program.cs  README.md
2015/AoC2015-08/: day08.cs  (+3 more)
2022/: .gitignore  01.md  01.py  02.md  02.py  03.md  03.py  04.md  04.py  05.md  05.py  06.md  06.py  07.md  07.py  08.md  08.py  09.md  09.py  10.md  10.py  11.md  11.py  12.md  12.py  13.md  13.py  14.md  14.py  15.md  15.py  17.md  17.py  README.md  aoc.py  newday.sh  rope.py  template.py
2023/: .gitignore  Advent-Of-Code-2023.sln  README.md  newday.sh
2024/: .gitignore  README.md
2025/: README.md  codex_day10.py  codex_explains_day10.md  day00.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  present_shape.py  pyproject.toml  scratchpad.ipynb  tree_region.py  treeregion_solver.py
2025/scripts/: new_day.py
2025/src/aoc2025/: __init__.py  __main__.py  cli.py  core.py  loader.py
2025/src/aoc2025/days/: __init__.py  day01.py
2025/tests/: test_day00.py  test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day12.py
Helpers/: .gitignore  Logger.cs  Program.cs
(+311 files in other folders)
